# synaptic-strategy

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  docker-compose.yml  synaptic-strategy-handoff.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_pgvector.py  0002_create_schema.py  0003_indicators_related_kpis.py  0004_indicators_kpi_type.py  0005_commentaries_author_and_unique.py  0006_action_plans_author_and_unique.py  0007_create_area_commentaries.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  action_plan.py  ai_diagnostic.py  area.py  area_commentary.py  commentary.py  department_score.py  indicator.py  indicator_department.py  indicator_result.py  rag_document.py  strategic_pillar.py
backend/app/seed/: data.py  generate_results.py  generate_scores.py  (+1 more)
backend/tests/: conftest.py  test_action_plan.py  test_ai_action_plan.py  test_ai_chat.py  test_ai_diagnostic.py  test_area_ai_summary.py  test_area_commentary.py  test_area_dashboard.py  test_areas_list.py  test_commentary.py  test_config.py  test_executive_overview.py  test_health.py  test_indicator_detail.py  test_meta.py  test_migrations.py  test_scoring.py  test_seed.py  test_seed_pdfs_benchmark_report.py  test_seed_pdfs_llm.py  test_seed_pdfs_llm_cache.py  test_seed_pdfs_manual.py  test_seed_pdfs_meeting_minutes.py  test_seed_pdfs_meeting_minutes_narrative.py  test_seed_pdfs_narrative.py  test_seed_pdfs_run.py  test_seed_pdfs_strategic_review.py  test_strategy_graph.py
(+82 files in other folders)
