[project]
name = "synaptic-strategy-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Calçada",email = "pauloabcalcada@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (==0.138.1)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "reportlab (>=5.0.0,<6.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
